# DronesAutonomos

./: INDICE_SCRIPTS.md  README.md  requirements.txt
VOLUMEN-1/01-Hardware/: README.md  calculadora_empuje.py
VOLUMEN-1/02-Ardupilot/Python/: README.md  calibrate_sensors.py  cambiar_modo.py  conexion_basica.py  despegar_aterrizar.py  geofence_definir.py  parameter_configurator.py  requirements.txt  waypoint_simple.py
VOLUMEN-1/03-MAVLink/Python/: README.md  leer_telemetria_avanzada.py  requirements.txt  telemetry_reader.py
VOLUMEN-1/03-MAVLink/Python/examples/: connect_to_fc.py
VOLUMEN-1/Anexos/A1-Git/: README.md
VOLUMEN-1/Anexos/A2-Python/: README.md  advanced_example.py  color_detection_simple.py  requirements.txt  telemetry_basic.py
VOLUMEN-2/01-ROS2/: install_ros2.sh
VOLUMEN-2/01-ROS2/Python/: README.md  controlador_dron.py  estado_vuelo_node.py  navegador_poi.py  publisher_simple.py  subscriber_simple.py
VOLUMEN-2/02-OpenCV-YOLO/Python/: README.md  color_detection.py  requirements.txt  yolo_detection.py
VOLUMEN-2/03-IA-Drones/: README.md  drone_person_follower.py  jetson_yolo_optimization.py  latency_benchmark.py  mission_analyzer.py  power_monitoring.py  requirements.txt
VOLUMEN-2/Anexos/A1-Git/: README.md
VOLUMEN-2/Anexos/A2-Cpp/: CMakeLists.txt  README.md  bridge_mavlink.cpp  nodo_publisher.cpp  nodo_subscriber.cpp
